--- a/client/src/components/track-analysis/track-analysis.styles.scss
+++ b/client/src/components/track-analysis/track-analysis.styles.scss
@@ -34,10 +34,9 @@ canvas {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 3px 0;
+    padding: 7px 0 3px 0;
     margin-bottom: 5px;
-    background-color: rgb(245, 141, 100);
-    border: 1px solid black;
+    border-top: 1px solid #94dadc;
 
     input {
       width: 40%;
