--- a/client/src/components/track-analysis/track-analysis.styles.scss
+++ b/client/src/components/track-analysis/track-analysis.styles.scss
@@ -1,22 +1,8 @@
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 canvas {
-  border: 1px black solid;
   @include setwidthandheight(100%, 100px);
+  border: 1px black solid;
 }
 
 .preview-audio {
@@ -36,7 +22,7 @@ canvas {
     width: 100%;
     padding: 7px 0 3px 0;
     margin-bottom: 5px;
-    border-top: 1px solid #94dadc;
+    border-top: 1px solid $primcardcolor;
 
     input {
       width: 40%;
