--- a/client/src/components/card-ai/card-ai.styles.scss
+++ b/client/src/components/card-ai/card-ai.styles.scss
@@ -1,27 +1,13 @@
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 .card-ai {
   @include setwidthandheight(100%, 100%);
-  @include setborderwithradius(2px solid #609ae4, 52px);
-  background-color: #151527;
+  @include setborderwithradius(2px solid $seccardcolor, 52px);
   @include flexeddiv(column, space-around);
+  background-color: $cardbackcolor;
 
   .card-ai-switch {
     @include flexeddiv(row, space-evenly);
-    color: #94dadc;
+    color: $primcardcolor;
   }
 }
