--- a/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
+++ b/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
@@ -1,32 +1,10 @@
-@mixin animation($type, $sec) {
-  -webkit-transition: $type $sec ease;
-  -moz-transition: $type $sec ease;
-  -o-transition: $type $sec ease;
-  -ms-transition: $type $sec ease;
-  transition: $type $sec ease;
-}
-
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 .card-radio-playlist {
   @include setwidthandheight(100%, 90%);
-  background-color: #151527;
-  @include setborderwithradius(2px solid #94dadc, 30px);
+  @include setborderwithradius(2px solid $primcardcolor, 30px);
   @include flexeddiv(unset, center);
+  background-color: $cardbackcolor;
   align-items: center;
   margin: 28px 5px 0 2.5px;
   color: white;
@@ -41,8 +19,8 @@
     }
 
     &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
       @include setborderwithradius(unset, 10px);
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
 
     &::-webkit-scrollbar-thumb {
