--- a/client/src/components/card-signin/card-signin.styles.scss
+++ b/client/src/components/card-signin/card-signin.styles.scss
@@ -1,32 +1,10 @@
-@mixin animation($type, $sec) {
-  -webkit-transition: $type $sec ease;
-  -moz-transition: $type $sec ease;
-  -o-transition: $type $sec ease;
-  -ms-transition: $type $sec ease;
-  transition: $type $sec ease;
-}
-
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 .card-signin {
   @include setwidthandheight(100%, 100%);
-  background-color: #151527;
-  @include setborderwithradius(2px solid #94dadc, 52px);
+  @include setborderwithradius(2px solid $primcardcolor, 52px);
   @include flexeddiv(column, space-around);
+  background-color: $cardbackcolor;
 
   form {
     margin: auto 15%;
