--- a/client/src/components/card-userlist/card-userlist.styles.scss
+++ b/client/src/components/card-userlist/card-userlist.styles.scss
@@ -1,42 +1,12 @@
-@mixin animation($type, $sec) {
-  -webkit-transition: $type $sec ease;
-  -moz-transition: $type $sec ease;
-  -o-transition: $type $sec ease;
-  -ms-transition: $type $sec ease;
-  transition: $type $sec ease;
-}
-
-@mixin animationwithdelay($type, $sec, $cd) {
-  -webkit-transition: $type $sec ease $cd;
-  -moz-transition: $type $sec ease $cd;
-  -o-transition: $type $sec ease $cd;
-  -ms-transition: $type $sec ease $cd;
-  transition: $type $sec ease $cd;
-}
-
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 .card-userlist {
   @include setwidthandheight(100%, 100%);
-  @include setborderwithradius(2px solid #609ae4, 52px);
+  @include setborderwithradius(2px solid $seccardcolor, 52px);
   @include flexeddiv(column, flex-start);
   @include animation(all, 2s);
   align-items: center;
-  background-color: #151527;
+  background-color: $cardbackcolor;
 
   .placeholder {
     @include setwidthandheight(100%, 46%);
@@ -55,10 +25,10 @@
       @include setwidthandheight(100%, 8%);
       @include animation(all, 1s);
       border-radius: 0;
-      border-top: 0px solid #609ae4;
-      border-left: 0px solid #609ae4;
-      border-right: 0px solid #609ae4;
-      border-bottom: 2px solid #609ae4;
+      border-top: 0px solid $seccardcolor;
+      border-left: 0px solid $seccardcolor;
+      border-right: 0px solid $seccardcolor;
+      border-bottom: 2px solid $seccardcolor;
 
       .searchbar-image {
         margin-left: 3%;
@@ -69,7 +39,7 @@
 
         input {
           width: 90%;
-          color: #609ae4;
+          color: $seccardcolor;
         }
       }
     }
@@ -77,7 +47,7 @@
 
   .searchbar {
     @include setwidthandheight(90%, 50px);
-    @include setborderwithradius(2px #609ae4 solid, 15px);
+    @include setborderwithradius(2px $seccardcolor solid, 15px);
     @include animationwithdelay(all, 1s, 0.5s);
     text-align: center;
     display: flex;
@@ -85,7 +55,7 @@
     .searchbar-image {
       @include setwidthandheight(20%, 100%);
       @include animation(all, 2s);
-      border-right: 1px solid #609ae4;
+      border-right: 1px solid $seccardcolor;
       -webkit-appearance: div;
       -moz-appearance: div;
       appearance: div;
@@ -108,7 +78,7 @@
 
       input {
         @include setwidthandheight(90%, 65%);
-        color: #609ae4;
+        color: $seccardcolor;
         border: 0;
         font-size: x-large;
         outline: none;
@@ -132,7 +102,7 @@
 
     .searchlist-buttons {
       @include setwidthandheight(100%, 10%);
-      border-bottom: #609ae4 solid 2px;
+      border-bottom: $seccardcolor solid 2px;
       display: none;
       justify-content: space-around;
       color: white;
@@ -170,15 +140,15 @@
         }
 
         &::-webkit-scrollbar-track {
+          @include setborderwithradius(unset, 10px);
           box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
           -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
-          @include setborderwithradius(unset, 10px);
         }
 
         &::-webkit-scrollbar-thumb {
+          @include setborderwithradius(unset, 10px);
           box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
           -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
-          @include setborderwithradius(unset, 10px);
         }
 
         .user-item {
@@ -189,7 +159,7 @@
           height: 60px;
 
           &:hover {
-            background-color: #609ae4;
+            background-color: $seccardcolor;
           }
 
           .user-info {
@@ -200,7 +170,7 @@
                 color: pink;
               }
               &.subscribed {
-                color: #94dadc;
+                color: $primcardcolor;
               }
             }
           }
@@ -223,11 +193,11 @@
 
           .user-menu {
             @include setwidthandheight(fit-content, 60px);
-            @include setborderwithradius(1px #94dadc solid, 5px);
+            @include setborderwithradius(1px $primcardcolor solid, 5px);
             display: none;
             justify-content: flex-end;
             flex-direction: row;
-            background-color: #94dadc;
+            background-color: $primcardcolor;
             opacity: 0.8;
             padding-left: 2px;
 
