--- a/client/src/components/changingcards/changingcards.styles.scss
+++ b/client/src/components/changingcards/changingcards.styles.scss
@@ -1,34 +1,4 @@
-@mixin animation($type, $sec) {
-  -webkit-transition: $type $sec ease;
-  -moz-transition: $type $sec ease;
-  -o-transition: $type $sec ease;
-  -ms-transition: $type $sec ease;
-  transition: $type $sec ease;
-}
-
-@mixin animationwithdelay($type, $sec, $cd) {
-  -webkit-transition: $type $sec ease $cd;
-  -moz-transition: $type $sec ease $cd;
-  -o-transition: $type $sec ease $cd;
-  -ms-transition: $type $sec ease $cd;
-  transition: $type $sec ease $cd;
-}
-
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 .react-card-back {
   transform-style: flat !important;
@@ -39,9 +9,9 @@
 
   .card-big-primary {
     @include setwidthandheight(90%, 80%);
+    @include animation(all, 2s);
     position: absolute;
     z-index: 6;
-    @include animation(all, 2s);
 
     &.disabled {
       z-index: 5;
@@ -51,9 +21,9 @@
 
   .card-big-secondary {
     @include setwidthandheight(90%, 80%);
+    @include animation(all, 2s);
     position: absolute;
     z-index: 6;
-    @include animation(all, 2s);
     background-color: transparent;
 
     &.disabled {
@@ -63,17 +33,17 @@
   }
 
   .card-big-blur {
-    position: absolute;
     @include setwidthandheight(100%, 100%);
     @include setborderwithradius(unset, 52px);
-    backdrop-filter: blur(10px);
     @include animation(backdrop-filter, 2s);
+    position: absolute;
+    backdrop-filter: blur(10px);
     cursor: pointer;
 
     &.disabled {
+      @include animationwithdelay(all, 0.1s, 0.5s);
       backdrop-filter: unset;
       width: 0;
-      @include animationwithdelay(all, 0.1s, 0.5s);
     }
   }
 }
