--- a/client/src/components/review/review.styles.scss
+++ b/client/src/components/review/review.styles.scss
@@ -1,30 +1,7 @@
-@mixin animation($type, $sec) {
-  -webkit-transition: $type $sec ease;
-  -moz-transition: $type $sec ease;
-  -o-transition: $type $sec ease;
-  -ms-transition: $type $sec ease;
-  transition: $type $sec ease;
-}
-
-@mixin flexeddiv($flexdirection, $justifycontent) {
-  display: flex;
-  flex-direction: $flexdirection;
-  justify-content: $justifycontent;
-}
-
-@mixin setwidthandheight($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-@mixin setborderwithradius($border, $radius) {
-  border: $border;
-  border-radius: $radius;
-}
+@use '../../styles/base';
 
 .review-main {
-  //background-color: #609ae4;
-  @include setborderwithradius(1px solid #609ae4, 8px);
+  @include setborderwithradius(1px solid $seccardcolor, 8px);
   @include flexeddiv(row, unset);
   @include animation(all, 0.8s);
   color: white;
@@ -36,41 +13,39 @@
 
   .review-container-main {
     @include flexeddiv(column, space-around);
+    @include setwidthandheight(100%, 100%);
+    @include animation(opacity, 2s);
     border-radius: 100%;
     line-height: 200%;
     margin: 0;
-    @include setwidthandheight(100%, 100%);
     opacity: 100%;
-    @include animation(opacity, 2s);
   }
 
   &:hover {
-    box-shadow: 0 0 5px #609ae4, 0 0 25px #609ae4, 0 0 50px #609ae4,
-      0 0 100px #609ae4;
+    box-shadow: 0 0 5px $seccardcolor, 0 0 25px $seccardcolor,
+      0 0 50px $seccardcolor, 0 0 100px $seccardcolor;
   }
 }
 
 .review-info {
-  //background-color: #609ae4;
-  @include setborderwithradius(1px solid #609ae4, 8px);
+  @include setborderwithradius(1px solid $seccardcolor, 8px);
   @include flexeddiv(column, space-around);
+  @include animation(all, 1.4s);
+  overflow: hidden;
+  height: 18vh;
   color: white;
   text-align: center;
   padding: 10px 2px;
   margin-bottom: 10px;
-  @include animation(all, 1.4s);
-  overflow: hidden;
-  height: 18vh;
 
   &.minified {
+    @include setborderwithradius(0px solid black, 8px);
     height: 0;
     padding: 0;
-    @include setborderwithradius(0px solid black, 8px);
   }
 
   textarea {
     @include setborderwithradius(1px solid black, 4px);
-    //background-color: rgba(255, 255, 255, 0.3);
     height: 100px;
     overflow-y: auto;
     resize: none;
